--- a/Emotion_detection_models.ipynb
+++ b/Emotion_detection_models.ipynb
@@ -121,14 +121,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4cc07978",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 115,
    "id": "576e8d6f",
    "metadata": {},
@@ -269,43 +261,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "967e4dc6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "52d0aa1e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "76c76d52",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "7c733c83",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "26b792ff",
+   "id": "679eb940",
    "metadata": {},
    "source": [
-    "## text preprocessing"
+    "### The step above is used with models that need a textual presentation of the input (like LSTM...)"
    ]
   },
   {
@@ -528,7 +488,7 @@
    "id": "c7db4fba",
    "metadata": {},
    "source": [
-    "## 🤖  Entraîner un modèle de classification"
+    "## training a classification model (Logistic regression)"
    ]
   },
   {
@@ -1075,6 +1035,14 @@
     "| -------------------------- | ------------------- | ------- | ---------- |\n",
     "| TF-IDF                     | ✅                   | ✅       | ❌          |\n",
     "| Tokenizer + pad\\_sequences | ❌ (pas utile ici)   | ❌       | ✅          |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ac45cec",
+   "metadata": {},
+   "source": [
+    "## Training an XGBoost model"
    ]
   },
   {
@@ -1698,14 +1666,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9ca14c21",
-   "metadata": {},
-   "source": [
-    "# Neural Network"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 146,
    "id": "e4370027",
@@ -2100,23 +2060,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "889a829a",
+   "cell_type": "markdown",
+   "id": "256f26ee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### For further use, push the model on huggingface"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "87357e45",
+   "execution_count": 18,
+   "id": "bf0cbed5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7925bf07ff6f4ec0a16b86da164cbb35",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2131,83 +2091,84 @@
    "source": [
     "# 1. Connexion à Hugging Face\n",
     "from huggingface_hub import login\n",
-    "login()  # Colle ton token ici"
+    "login()  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a369ce24",
+   "execution_count": 26,
+   "id": "65d2b4f1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\anaconda3\\Lib\\site-packages\\transformers\\utils\\generic.py:260: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
-      "  torch.utils._pytree._register_pytree_node(\n",
-      "C:\\ProgramData\\anaconda3\\Lib\\site-packages\\transformers\\utils\\generic.py:260: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
-      "  torch.utils._pytree._register_pytree_node(\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f938d66e12b459f90ab6926b88f4688",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "pytorch_model.bin:   0%|          | 0.00/268M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "393f54e9d3c04b199f19bb53e52f9bb7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Upload 1 LFS files:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/Ikraaaam/bert-emotion-app/commit/de384e9e9c06cde03ab22f6c7e3eb6a6cffc8842', commit_message='Upload tokenizer', commit_description='', oid='de384e9e9c06cde03ab22f6c7e3eb6a6cffc8842', pr_url=None, pr_revision=None, pr_num=None)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 2. Charger le modèle et le tokenizer depuis le dossier local\n",
     "from transformers import DistilBertForSequenceClassification, DistilBertTokenizerFast\n",
+    "# 2. Charger le modèle et le tokenizer depuis le dossier local\n",
     "\n",
     "model = DistilBertForSequenceClassification.from_pretrained(\"bert_emotion_model\")\n",
-    "tokenizer = DistilBertTokenizerFast.from_pretrained(\"bert_emotion_model\")\n",
-    "\n",
-    "# 3. Envoyer sur Hugging Face\n",
-    "model.push_to_hub(\"bert-emotion-app\")\n",
-    "tokenizer.push_to_hub(\"bert-emotion-app\")"
+    "tokenizer = DistilBertTokenizerFast.from_pretrained(\"bert_emotion_model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e7606f77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Ajouter les vrais noms d’émotions\n",
+    "model.config.id2label = {\n",
+    "    0: \"joy\",\n",
+    "    1: \"sadness\",\n",
+    "    2: \"anger\",\n",
+    "    3: \"fear\",\n",
+    "    4: \"love\",\n",
+    "    5: \"surprise\"\n",
+    "}\n",
+    "model.config.label2id = {v: k for k, v in model.config.id2label.items()}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88c9990c",
+   "id": "2892600f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 3. Re-sauvegarder dans un nouveau dossier temporaire\n",
+    "model.save_pretrained(\"model_to_push\")\n",
+    "tokenizer.save_pretrained(\"model_to_push\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "97f64219",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/Ikraaaam/bert-emotion-app/commit/b14d91603ec3b2740c72c5b1502125e3b0da1f9f', commit_message='Upload tokenizer', commit_description='', oid='b14d91603ec3b2740c72c5b1502125e3b0da1f9f', pr_url=None, pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4. Push vers Hugging Face\n",
+    "model.push_to_hub(\"Ikraaaam/bert-emotion-app\")\n",
+    "tokenizer.push_to_hub(\"Ikraaaam/bert-emotion-app\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ca14c21",
+   "metadata": {},
+   "source": [
+    "# Neural Network"
+   ]
   },
   {
    "cell_type": "markdown",
